--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -72,17 +72,19 @@
   <ItemGroup>
     <Compile Include="AdventureTimeModel.cs" />
     <Compile Include="Interfaces\ITrackable.cs" />
-    <Compile Include="Migrations\201507211431402_Initial.cs" />
-    <Compile Include="Migrations\201507211431402_Initial.Designer.cs">
-      <DependentUpon>201507211431402_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201507232119468_InitialCreate.cs" />
+    <Compile Include="Migrations\201507232119468_InitialCreate.Designer.cs">
+      <DependentUpon>201507232119468_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Action.cs" />
     <Compile Include="Models\Metadata.cs" />
-    <Compile Include="Models\Segment.cs" />
+    <Compile Include="Models\Page.cs" />
+    <Compile Include="Models\StarRating.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Story.cs" />
+    <Compile Include="RemoveUnderscoreForeignKeyNamingConvention.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -92,8 +94,8 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201507211431402_Initial.resx">
-      <DependentUpon>201507211431402_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201507232119468_InitialCreate.resx">
+      <DependentUpon>201507232119468_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
