--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -71,7 +71,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdventureTimeModel.cs" />
-    <Compile Include="Interfaces\ITrackable.cs" />
     <Compile Include="Migrations\201507232119468_InitialCreate.cs" />
     <Compile Include="Migrations\201507232119468_InitialCreate.Designer.cs">
       <DependentUpon>201507232119468_InitialCreate.cs</DependentUpon>
@@ -81,7 +80,7 @@
     <Compile Include="Models\Action.cs" />
     <Compile Include="Models\Metadata.cs" />
     <Compile Include="Models\Page.cs" />
-    <Compile Include="Models\StarRating.cs" />
+    <Compile Include="Models\Rating.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Story.cs" />
     <Compile Include="RemoveUnderscoreForeignKeyNamingConvention.cs" />
