--- a/Console/App.config
+++ b/Console/App.config
@@ -14,7 +14,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=C:\Users\pragers\AdventureTime.mdf;Initial Catalog=AdventureTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AdventureTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <runtime>
