--- a/UI/packages.config
+++ b/UI/packages.config
@@ -6,6 +6,9 @@
   <package id="Breeze.Server.WebApi2" version="1.5.4" targetFramework="net45" />
   <package id="Breeze.WebApi2.EF6" version="1.5.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net45" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net45" />
+  <package id="Glimpse.EF6" version="1.6.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
